Fixed the flex-wrap feature
Fixed the CSS for flexbox

--- a/Module 1/HTML/Project/project.css
+++ b/Module 1/HTML/Project/project.css
@@ -64,7 +64,7 @@ header {
 
 .container {
 	display: flex;
-	flex: flex-wrap;
+	flex-wrap: wrap;
 }
 
 .section {
